--- a/.gitignore
+++ b/.gitignore
@@ -365,8 +365,8 @@ Lab3/Lab3_T.3.7/cmake-build-debug/
 Lab3/Lab3_T.3.7/.idea/
 Lab3/Lab3_T.3.8/cmake-build-debug/
 Lab3/Lab3_T.3.8/.idea/
-
-
+Lab3/Lab3_T.3.9/cmake-build-debug/
+Lab3/Lab3_T.3.9/.idea/
 
 
 
