--- a/.gitignore
+++ b/.gitignore
@@ -368,6 +368,29 @@ Lab3/Lab3_T.3.8/.idea/
 Lab3/Lab3_T.3.9/cmake-build-debug/
 Lab3/Lab3_T.3.9/.idea/
 
+Lab4/Lab4_T.4.1/cmake-build-debug/
+Lab4/Lab4_T.4.1/.idea/
+Lab4/Lab4_T.4.2/cmake-build-debug/
+Lab4/Lab4_T.4.2/.idea/
+Lab4/Lab4_T.4.3/cmake-build-debug/
+Lab4/Lab4_T.4.3/.idea/
+Lab4/Lab4_T.4.5/cmake-build-debug/
+Lab4/Lab4_T.4.5/.idea/
+Lab4/Lab4_T.4.6/cmake-build-debug/
+Lab4/Lab4_T.4.6/.idea/
+Lab4/Lab4_T.4.7/cmake-build-debug/
+Lab4/Lab4_T.4.7/.idea/
+Lab4/Lab4_T.4.8/cmake-build-debug/
+Lab4/Lab4_T.4.8/.idea/
+Lab4/Lab4_T.4.9/cmake-build-debug/
+Lab4/Lab4_T.4.9/.idea/
+Lab4/Lab4_T.4.10/cmake-build-debug/
+Lab4/Lab4_T.4.10/.idea/
+Lab4/Lab4_T.4.11/cmake-build-debug/
+Lab4/Lab4_T.4.11/.idea/
+Lab4/Lab4_T.4.12/cmake-build-debug/
+Lab4/Lab4_T.4.12/.idea/
+
 
 
 *.cmake
