--- a/.gitignore
+++ b/.gitignore
@@ -391,6 +391,19 @@ Lab4/Lab4_T.4.11/.idea/
 Lab4/Lab4_T.4.12/cmake-build-debug/
 Lab4/Lab4_T.4.12/.idea/
 
+Lab7/Lab7_T.7.1/cmake-build-debug/
+Lab7/Lab7_T.7.1/.idea/
+Lab7/Lab7_T.7.2/cmake-build-debug/
+Lab7/Lab7_T.7.2/.idea/
+Lab7/Lab7_T.7.3/cmake-build-debug/
+Lab7/Lab7_T.7.3/.idea/
+
+Lab7/Lab8_T.8.1/cmake-build-debug/
+Lab7/Lab8_T.8.1/.idea/
+Lab7/Lab8_T.8.2/cmake-build-debug/
+Lab7/Lab8_T.8.2/.idea/
+Lab7/Lab8_T.8.3/cmake-build-debug/
+Lab7/Lab8_T.8.3/.idea/
 
 
 *.cmake
