--- a/.gitignore
+++ b/.gitignore
@@ -405,6 +405,18 @@ Lab7/Lab8_T.8.2/.idea/
 Lab7/Lab8_T.8.3/cmake-build-debug/
 Lab7/Lab8_T.8.3/.idea/
 
+Lab9/Lab9_T.9.1/cmake-build-debug/
+Lab9/Lab9_T.9.1/.idea/
+Lab9/Lab9_T.9.2/cmake-build-debug/
+Lab9/Lab9_T.9.2/.idea/
+Lab9/Lab9_T.9.3/cmake-build-debug/
+Lab9/Lab9_T.9.3/.idea/
+Lab9/Lab9_T.9.4/cmake-build-debug/
+Lab9/Lab9_T.9.4/.idea/
+Lab9/Lab9_T.9.5/cmake-build-debug/
+Lab9/Lab9_T.9.5/.idea/
+Lab9/Lab9_T.9.6/cmake-build-debug/
+Lab9/Lab9_T.9.6/.idea/
 
 *.cmake
 *.xml
